# A-star-pathfinding

./: CMakeLists.txt
src/: main.c
